crates/matrix-sdk-crypto/src/types/snapshots/matrix_sdk_crypto__types__test__snapshot_backup_decryption_key-2.snap
---
source: crates/matrix-sdk-crypto/src/types/mod.rs
expression: decryption_key
---
BackupDecryptionKey(
    "...",
)
