crates/matrix-sdk-crypto/src/types/snapshots/matrix_sdk_crypto__types__test__snapshot_secret_bundle-2.snap
---
source: crates/matrix-sdk-crypto/src/types/mod.rs
expression: secret_bundle
---
{
  "cross_signing": {
    "master_key": "MSKMSKMSKMSKMSKMSKMSKMSKMSKMSKMSKMSK",
    "user_signing_key": "USKUSKUSKUSKUSKUSKUSKUSKUSKUSKUSKUSK",
    "self_signing_key": "SSKSSKSSKSSKSSKSSKSSKSSKSSKSSKSSK"
  },
  "backup": null
}
