crates/matrix-sdk-crypto/src/types/snapshots/matrix_sdk_crypto__types__test__snapshot_secret_bundle.snap
---
source: crates/matrix-sdk-crypto/src/types/mod.rs
expression: secret_bundle
---
{
  "cross_signing": {
    "master_key": "MSKMSKMSKMSKMSKMSKMSKMSKMSKMSKMSKMSK",
    "user_signing_key": "USKUSKUSKUSKUSKUSKUSKUSKUSKUSKUSKUSK",
    "self_signing_key": "SSKSSKSSKSSKSSKSSKSSKSSKSSKSSKSSK"
  },
  "backup": {
    "algorithm": "m.megolm_backup.v1.curve25519-aes-sha2",
    "key": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
    "backup_version": "v1.1"
  }
}
