crates/matrix-sdk-crypto/src/types/snapshots/matrix_sdk_crypto__types__test__snapshot_signatures.snap
---
source: crates/matrix-sdk-crypto/src/types/mod.rs
expression: signatures
---
{
  "@alice:localhost": {
    "curve25519:IJKLMNOP": "AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQ",
    "ed25519:ABCDEFGH": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
  },
  "@bob:localhost": {
    "ed25519:ABCDEFGH": "SOME+B64+SOME+B64+SOME+B64+=="
  }
}
